--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "cert4https",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "provide a self signed cert for https",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "node -e \"r=require;r('fs').writeFile('./ssl-cert-snakeoil.json',JSON.stringify(r('./self-signed')(),null,4));\""
+    "postinstall": "node -e \"r=require;r('fs').writeFileSync('./ssl-cert-snakeoil.json',JSON.stringify(r('./self-signed')(),null,4));\""
   },
   "repository": {
     "type": "git",
@@ -23,6 +22,6 @@
   },
   "homepage": "https://github.com/josudoey/cert4https#readme",
   "dependencies": {
-    "node-forge": "^0.7.0"
+    "node-forge": "^0.10.0"
   }
 }
